--- a/src/HAI722I/tds/td_main.tex
+++ b/src/HAI722I/tds/td_main.tex
@@ -19,9 +19,9 @@
     \tableofcontents
 
     \newpage
-    \section*{TD1}\label{sec:TD1}
-    \addcontentsline{toc}{section}{\nameref{sec:TD1}}
-    \setcounter{section}{1}
+    % \section*{TD1}\label{sec:TD1}
+    % \addcontentsline{toc}{section}{\nameref{sec:TD1}}
+    % \setcounter{section}{1}
     \setcounter{tdcounter}{0}
     \input{../tds/td_1.tex}
 
