--- a/src/common/common_header.tex
+++ b/src/common/common_header.tex
@@ -47,7 +47,7 @@
 \usepackage{tikz}                % Drawing graphics programmatically
 \usepackage{pgfplots}            % Plotting graphs with TikZ
 \pgfplotsset{compat=1.18}        % Set pgfplots compatibility version
-\usetikzlibrary{arrows}          % Arrow tips for TikZ diagrams
+\usetikzlibrary{positioning, shapes, arrows.meta}          % Arrow tips for TikZ diagrams
 
 % ==============================================================================
 % COLOR MANAGEMENT
