--- a/src/common/macros/math.tex
+++ b/src/common/macros/math.tex
@@ -13,9 +13,9 @@
 % INTERVAL NOTATION
 % ==============================================================================
 
-\newcommand{\oo}[1]{\mathopen{}\left]#1\right[\mathclose{}}   % Open interval: ]a, b[
-\newcommand{\of}[1]{\mathopen{}\left]#1\right]\mathclose{}}   % Half-open interval: ]a, b]
-\newcommand{\fo}[1]{\mathopen{}\left[#1\right[\mathclose{}}   % Half-open interval: [a, b[
+\newcommand{\oo}[1]{\mathopen{}\left]#1\right[\mathclose{}}   % Open interval: ]a, b[      % chktex 9 
+\newcommand{\of}[1]{\mathopen{}\left]#1\right]\mathclose{}}   % Half-open interval: ]a, b] % chktex 9 chktex 10
+\newcommand{\fo}[1]{\mathopen{}\left[#1\right[\mathclose{}}   % Half-open interval: [a, b[ % chktex 9 chktex 10 chktex 15
 \newcommand{\ff}[1]{\mathopen{}\left[#1\right]\mathclose{}}   % Closed interval: [a, b]
 
 % ==============================================================================
@@ -45,8 +45,8 @@
 % TOPOLOGY NOTATION
 % ==============================================================================
 
-\newcommand{\bolo}[2]{\mathsf{B}\left({#1, #2}\mathopen{}\right[\mathclose{}}  % Open ball: B(x, r)[
-\newcommand{\bolf}[2]{\mathsf{B}\left({#1, #2}\mathopen{}\right]\mathclose{}}  % Closed ball: B(x, r)]
+\newcommand{\bolo}[2]{\mathsf{B}\left({#1, #2}\mathopen{}\right[\mathclose{}}  % Open ball: B(x, r)[   % chktex 9
+\newcommand{\bolf}[2]{\mathsf{B}\left({#1, #2}\mathopen{}\right]\mathclose{}}  % Closed ball: B(x, r)] % chktex 9
 
 % ==============================================================================
 % LIMITS & NORM NOTATION
@@ -89,4 +89,4 @@
 \newcommand{\from}{\ \colon\ }                 % Function definition symbol (f : X → Y)
 \newcommand{\smol}[1]{\text{\scriptsize{#1}}}  % Typeset text in scriptsize (for indices, etc.)
 
-\makeatother
+\makeatother % chktex 17
