maj consignes td2 713

--- a/src/HAI713I/tds/td_1.tex
+++ b/src/HAI713I/tds/td_1.tex
@@ -164,7 +164,7 @@
 
 
 % ----- Consignes exo 3 ----- %
-\begin{td-exo}[\mintinline{text}{step}, convergence, projections et énumération] % 3
+\begin{td-exo}[\(\text{Step}\), convergence, projections et énumération] % 3
 	Considérons le programme suivant (remarquez qu'il s'appelle \(a\)
 	et son entrée s'appelle \(y\)):
 	\begin{align*}
