--- a/src/HAI713I/tds/td_main.tex
+++ b/src/HAI713I/tds/td_main.tex
@@ -19,17 +19,13 @@
     \tableofcontents
 
     \newpage
-    \section*{TD1}\label{sec:TD1}
-    \addcontentsline{toc}{section}{\nameref{sec:TD1}}
-    \setcounter{section}{1}
+    \section{TD1}\label{sec:TD1}
     \setcounter{tdcounter}{0}
     \input{../tds/td_1.tex}
 
-    % \newpage
-    % \section*{TD2 --- Second sheet title}\label{sec:TD2}
-    % \addcontentsline{toc}{section}{\nameref{sec:TD2}}
-    % \setcounter{section}{2}
-    % \setcounter{tdcounter}{0}
-    % \input{../tds/td_2.tex}
+    \newpage
+    \section{TD2}\label{sec:TD2}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_2.tex}
 \end{document}
 
