--- a/src/HAI710I/tds/td_main.tex
+++ b/src/HAI710I/tds/td_main.tex
@@ -25,11 +25,18 @@
     \setcounter{tdcounter}{0}
     \input{../tds/td_1.tex}
 
-    % \newpage
-    % \section*{TD2 --- Second sheet title}\label{sec:TD2}
-    % \addcontentsline{toc}{section}{\nameref{sec:TD2}}
-    % \setcounter{section}{2}
-    % \setcounter{tdcounter}{0}
-    % \input{../tds/td_2.tex}
+    \newpage
+    \section*{TD2 --- Recherche de solution optimale}\label{sec:TD2}
+    \addcontentsline{toc}{section}{\nameref{sec:TD2}}
+    \setcounter{section}{2}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_2.tex}
+
+    \newpage
+    \section*{TD3 --- Satisfaction de contraintes}\label{sec:TD3}
+    \addcontentsline{toc}{section}{\nameref{sec:TD3}}
+    \setcounter{section}{3}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_3.tex}
 \end{document}
 
