--- a/src/HAI710I/tds/td_3.tex
+++ b/src/HAI710I/tds/td_3.tex
@@ -1,3 +1,22 @@
 \begin{td-exo}[Le puzzle du zèbre]
-    Le puzzle du zèbre
+    Le puzzle du zèbre est un jeu logique bien connu, atribué à Albert Einstein
+    ou à Lewis Caroll, sans certitude que l'inventeur soit l'un des deux. Il
+    existe plusieurs variantes de ce jeu, voici l'énoncé d'origine.
+    
+    % TODO inserer enonce ici
+
+    Il faut aussi ajouter que les maisons sont supposées être sur une ligne. La
+    question \og{}qui boit de l'eau\fg{} doit être comprise comme \og{}sachant que
+    quelqu'un boit de leau, qui est-ce?\fg{} (sinon on peut trouver une solution
+    où personne ne boit de l'eau). De même la question \og{}qui possède le zèbre\fg{} 
+    doit être comprise comme \og{}sachant que quelqu'un possède le zèbre, qui est-ce?\fg{}.
+    Si on sait que quelqu'un boit de l'eau et que quelqu'un possède un zèbre, on peut 
+    en fait déterminer qui vit où, la couleur de sa maison, sa nationalité, ce qu'il 
+    boit et fume et son animal de compagnie.
+
+    Modéliser ce problème comme un problème de satisfaction de contraintes.
+
+    Quelle est la taille de l'espace de recherche?
+
+    Peut-on reformuler certaines contraintes pour diminuer l'espace de recherche?
 \end{td-exo}
