--- a/src/HAI713I/tds/td_main.tex
+++ b/src/HAI713I/tds/td_main.tex
@@ -27,5 +27,10 @@
     \section{TD2}\label{sec:TD2}
     \setcounter{tdcounter}{0}
     \input{../tds/td_2.tex}
+
+    \newpage
+    \section{TD3}\label{sec:TD3}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_3.tex}
 \end{document}
 
