--- a/src/HAI709I/tds/td_main.tex
+++ b/src/HAI709I/tds/td_main.tex
@@ -31,5 +31,12 @@
     \setcounter{section}{2}
     \setcounter{tdcounter}{0}
     \input{../tds/td_2.tex}
+
+    \newpage
+    \section*{TD3}\label{sec:TD3}
+    \addcontentsline{toc}{section}{\nameref{sec:TD3}}
+    \setcounter{section}{3}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_3.tex}
 \end{document}
 
