--- a/src/HAI702I/tds/td_2.tex
+++ b/src/HAI702I/tds/td_2.tex
@@ -30,30 +30,79 @@ Les exercices ou les questions marqués d'une étoile ne sont pas prioritaires.
 				\end{pmatrix}.
 			\end{equation*}
 
-			\item La matrice de la projection sur la droite \(\vect\begin{pmatrix}
-				a_1\\
-				a_2
-			\end{pmatrix}\) est:
+			\item On sait que la projection d'un vecteur \(u\) sur la droite 
+			définie par \(v\) est:
 			\begin{equation*}
-				P = \frac{1}{a_1^2 + a_2^2}
+				\text{p}_{u/v} = \frac{\langle u, v \rangle \cdot v}{\nn{v}^2}.
+			\end{equation*}
+			Il nous faut trouver l'image des vecteurs de la base canonique par la projection.
+			Donc:
+			\begin{equation*}
+				\begin{aligned}
+					\text{p}_{e_1/v}
+					&= \frac{\langle e_1, v \rangle \cdot v}{\nn{v}^2}\\
+					&= \frac{1 \times a_1 + 0 \times a_2}{a_1^2 + a_2^2} \begin{pmatrix}
+						a_1\\
+						a_2
+					\end{pmatrix}\\
+					&= \frac{a_1}{a_1^2 + a_2^2} \begin{pmatrix}
+						a_1\\
+						a_2
+					\end{pmatrix}
+					= \begin{pmatrix}
+						\frac{a_1^2}{a_1^2 + a_2^2}\\
+						\frac{a_1 a_2}{a_1^2 + a_2^2}
+					\end{pmatrix}.
+				\end{aligned}
+			\end{equation*}
+			On a l'image de \(e_1\). On fait de même pour \(e_2\):
+			\begin{equation*}
+				\begin{aligned}
+					\text{p}_{e_2/v}
+					&= \frac{\langle e_2, v \rangle \cdot v}{\nn{v}^2}\\
+					&= \frac{0 \times a_1 + 1 \times a_2}{a_1^2 + a_2^2} \begin{pmatrix}
+						a_1\\
+						a_2
+					\end{pmatrix}\\
+					&= \frac{a_2}{a_1^2 + a_2^2} \begin{pmatrix}
+						a_1\\
+						a_2
+					\end{pmatrix}
+					= \begin{pmatrix}
+						\frac{a_1 a_2}{a_1^2 + a_2^2}\\
+						\frac{a_2^2}{a_1^2 + a_2^2}
+					\end{pmatrix}.
+				\end{aligned}
+			\end{equation*}
+			Enfin, on met le tout ensemble pour obtenir la matrice:
+			\begin{equation*}
+				P_{p/v} = 
+				\begin{pmatrix}
+					\frac{a_1^2}{a_1^2 + a_2^2} & \frac{a_1 a_2}{a_1^2 + a_2^2}\\
+					\frac{a_1 a_2}{a_1^2 + a_2^2} & \frac{a_2^2}{a_1^2 + a_2^2}
+				\end{pmatrix}
+				= \frac{1}{a_1^2 + a_2^2}
 				\begin{pmatrix}
 					a_1^2 & a_1 a_2\\
 					a_1 a_2 & a_2^2
 				\end{pmatrix}.
 			\end{equation*}
 
-			\item La matrice de la symétrie par rapport à la droite \(\vect\begin{pmatrix}
-				a_1\\
-				a_2
-			\end{pmatrix}\) est:
+			\item La symétrie par rapport à la droite définie par \(v\) est la transformation
+			suivante:
 			\begin{equation*}
-				S = \frac{1}{a_1^2 + a_2^2}
+				S = e_1 + 2d = e_1 + 2(\text{p}_{e_1/v} - e_1) = 2\text{p}_{e_1/v} - e_1.
+			\end{equation*}
+			où \(d = \text{p}_{e_1/v} - e_1\). Alors:
+			\begin{equation*}
+				P_{S/v} = 2P - I_2 = 
 				\begin{pmatrix}
-					a_1^2 - a_2^2 & 2 a_1 a_2\\
-					2 a_1 a_2 & a_2^2 - a_1^2
+					\frac{2a_1^2}{a_1^2 + a_2^2} - 1 & \frac{2a_1 a_2}{a_1^2 + a_2^2}\\
+					\frac{2a_1 a_2}{a_1^2 + a_2^2} & \frac{2a_2^2}{a_1^2 + a_2^2} - 1
 				\end{pmatrix}.
 			\end{equation*}
 		\end{enumerate}
+		% TODO add schemas explicatifs
 	\end{td-sol}
 }{}
 
