--- a/src/HAI709I/tds/td_main.tex
+++ b/src/HAI709I/tds/td_main.tex
@@ -38,5 +38,19 @@
     \setcounter{section}{3}
     \setcounter{tdcounter}{0}
     \input{../tds/td_3.tex}
+
+    % \newpage
+    % \section*{TD4}\label{sec:TD4}
+    % \addcontentsline{toc}{section}{\nameref{sec:TD4}}
+    % \setcounter{section}{4}
+    % \setcounter{tdcounter}{0}
+    % \input{../tds/td_4.tex}
+
+    \newpage
+    \section*{TD5}\label{sec:TD5}
+    \addcontentsline{toc}{section}{\nameref{sec:TD5}}
+    \setcounter{section}{5}
+    \setcounter{tdcounter}{0}
+    \input{../tds/td_5.tex}
 \end{document}
 
